--- a/signatures.yaml
+++ b/signatures.yaml
@@ -309,7 +309,7 @@
   - JSON Web Key: /^(?:[A-Za-z0-9+/]{4})*(?:[A-Za-z0-9+/]{2}==|[A-Za-z0-9+/]{3}=)?$/gm
   #- Refresh Token: (?i)refresh[_-]{0,1}token["':= ]{0,5}["':= ]{0,5}.{5,}
   #- Access Token: (?i)access[_-]{0,1}token["' ]{1,2}[:=]{1}["' ]{1,2}.{5,64}
-  - Password Variable: \b(?i)password
+  - Password Variable: (?i)password
   - API Key Variable: (?i)_api_key
   - Secret Key Variable: (?i)_secret_key
 
