--- a/blacklist/values.yaml
+++ b/blacklist/values.yaml
@@ -1,16 +1,14 @@
 # Some notes: 
-# do not add a regex to blacklist "_0x1be7a8(0xe8e)})[_0x1be7a8(0x3cf)". It may contain strings on CSR pages.
+# do not add fringe regexes like "_0x1be7a8(0xe8e)})[_0x1be7a8(0x3cf)" to blacklist. It may contain strings on CSR pages.
 
-- (?i)data:.+/
-- (?i)image/[a-z]{1,4}
 - (?i)sha[0-9]{0,3}-
 - (?i)your[_-].+[-_]here
 - db.String
+- (?i)\\*.html
+- (?i)passwordInput
 - <(.*)API_KEY(.*)(HERE){0,1}>
 - (?i)string()
-- htmlFor="password"
 - (?i)INVALID_PASSWORD
-- label for=
 - \*\*\*\*
 - XXXXXX
 - sys\.argv\[\d\]
@@ -18,15 +16,11 @@
 - (?i)RESET_PASSWORD
 - React.
 - .+.m3u8
-- input type=
 - (?i)Enter
 - useState\(''\)
 - \]\(\)\}
-- catchAsync\(async
-- z.object\(
-- button
-- label
 - (?i)login.Password
+- (?i)checksum
 - document.getElementById
 - \{\}
 - \(\)
