--- a/blacklist/values.yaml
+++ b/blacklist/values.yaml
@@ -28,17 +28,11 @@
 - \(\'\'\)
 - (?i)your-.*-(token|key|password)
 - (?i)os.getenv
-- (?i)PasswordUtils\.HashPassword\(newPassword\)
+- (?i)PasswordUtils
 - SetOrKeep::Set\(TokenSymbol\(
 - '[0-9]+\.[0-9]+\.[0-9]+'
 - (?i)newUser.UserPassword
-- (?i)ctx.startAttribute\(token.value\)\)
-- (?i)ctx.addBoolean\(token.value\)\)
-- (?i)ctx.startRule\(token.value\)\)
-- (?i)PasswordUtils.HashPassword\(newPassword\)
-- (?i)PasswordUtils.HashPassword\(oldPassword\)
-- (?i)auth.get[_-]{0,1}tokens\(user\)
-- (?i)urielAccessKey
-- (?i)urielRefreshKey
+- (?i)startAttribute
+- (?i)Boolean
+- (?i)startRule
 - (?i)^.*\.png$
-- (?i)self.producer_key_password
